--- a/family.html
+++ b/family.html
@@ -376,53 +376,63 @@
     <div class="form-message error-msg" id="error-message">❌ Failed to send message. Please try again.</div>
   </form>
 
-  <script>
-    const form = document.getElementById("contact-form");
-    const loader = document.getElementById("loader");
-    const successMessage = document.getElementById("success-message");
-    const errorMessage = document.getElementById("error-message");
-
-    form.addEventListener("submit", async function (e) {
-      e.preventDefault();
-
-      loader.classList.add("show");
-      successMessage.classList.remove("show");
-      errorMessage.classList.remove("show");
-
-      const formData = {
-        fullName: document.getElementById("full-name").value,
-        email: document.getElementById("email").value,
-        subject: document.getElementById("subject").value,
-        message: document.getElementById("message").value,
-      };
-
-      try {
-        const response = await fetch("https://api.web3forms.com/submit", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            Accept: "application/json",
-          },
-          body: JSON.stringify({
-            access_key: "your-access-key", // 👈 یادت نره اینو با کلید واقعی جایگزین کنی
-            ...formData,
-          }),
-        });
-
-        const result = await response.json();
-        loader.classList.remove("show");
-
-        if (result.success) {
-          successMessage.classList.add("show");
-          form.reset();
-        } else {
-          errorMessage.classList.add("show");
-        }
-      } catch (error) {
-        loader.classList.remove("show");
-        errorMessage.classList.add("show");
-      }
+(function() {
+    // https://dashboard.emailjs.com/admin/account
+    emailjs.init({
+      publicKey: "LpjT6PFXqnLEJni6E",
     });
-  </script>
+})();
+
+const googleSheetWebhookURL = "https://script.google.com/macros/s/AKfycbxkFO4k5Gz6hBRnpsEaPb-bKsS7_Rd6kSl6EZ2zx-9KICNrNHgADnOu0FphfMfl2ikq/exec";
+const msg = document.querySelector(".form-message");
+const loader = document.querySelector(".loader");
+
+window.onload = function() {
+    document.getElementById("contact-form").addEventListener("submit", function(event) {
+        event.preventDefault();
+
+        loader.classList.add("show");
+        msg.innerHTML = "";
+        msg.classList.remove("show");
+
+        const form = this;
+
+        // ارسال ایمیل با EmailJS
+        emailjs.sendForm("service_4yvzeq8", "template_px597ka", form).then(
+            function() {
+                // ارسال داده به Google Sheets بعد از ارسال ایمیل موفق
+                const formData = new FormData(form);
+                const formDataObj = Object.fromEntries(formData.entries());
+
+                fetch(googleSheetWebhookURL, {
+                    method: "POST",
+                    headers: {
+                      "Content-Type": "application/x-www-form-urlencoded"
+                    },
+                    body: new URLSearchParams(formDataObj)
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log("Data saved to Google Sheet:", data);
+                })
+                .catch(error => {
+                    console.error("Error saving to Google Sheet:", error);
+                });
+
+                loader.classList.remove("show");
+                msg.innerHTML = "<span class='success-msg'>Email Sent and Data Saved!</span>";
+                msg.classList.add("show");
+                form.reset();
+                setTimeout(() => msg.classList.remove("show"), 3000);
+            },
+            function(error){
+                loader.classList.remove("show");
+                msg.classList.add("show");
+                msg.innerHTML = "<span class='error-msg'>Email Not Sent</span>";
+                console.error("EmailJS error:", error);
+            }
+        );
+    });
+};
 </body>
 </html>
