--- a/family.html
+++ b/family.html
@@ -374,7 +374,8 @@
     <div class="form-message success-msg" id="success-message">✅ Message sent successfully!</div>
     <div class="form-message error-msg" id="error-message">❌ Failed to send message. Please try again.</div>
   </form>
-
+  
+<script>
 (function() {
     // https://dashboard.emailjs.com/admin/account
     emailjs.init({
