--- a/404.html
+++ b/404.html
@@ -128,10 +128,9 @@
                 <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">404 Pages</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
 		<li class="breadcrumb-item">
-		  <a href="https://github.com/VisaProInternational/.com/blob/main/Emailjs-main/Emailjs-main/index.html" class="text-white">Home</a>
-		 </li>
+		<a href="form/form.html" class="nav-item nav-link">Registration</a>
                     <li class="breadcrumb-item"><a href="#" class="text-white">Pages</a></li>
-                    <li class="breadcrumb-item active text-secondary">Family Form</li>
+		<a href="form/form.html" class="nav-item nav-link">form</a>
                 </ol>    
             </div>
         </div>
