--- a/form/form.html
+++ b/form/form.html
@@ -267,7 +267,9 @@
   </div>
 	<a1>Email</a1>
     <input type="email" name="email" placeholder="Email">
-
+	<a1>Email</a1>
+    <input type="email" name="email" class="input-control" placeholder="Email" required>
+	  
     <h3>Passport Information</h3>
     <input type="text" name="passport_number" placeholder="Passport Number">
     <input type="date" name="passport_issue" placeholder="Date of Issue">
