--- a/form/form.html
+++ b/form/form.html
@@ -493,8 +493,8 @@
     <option value="260">Zambia (+260)</option>
     <option value="263">Zimbabwe (+263)</option>
 </select>
-	<a1>Phone Number</a1>
-    <input type="phone" name="phone" placeholder="Phone Number">
+    <label for="phone">Phone *</label>
+    <input type="text" name="phone" class="input-control" placeholder="Enter Phone No" required>
 	    
 	<a1>Email</a1>
     <input type="email" name="email" placeholder="Email">
