--- a/form/form.html
+++ b/form/form.html
@@ -705,7 +705,7 @@
 
     <h3>Travel Purpose</h3>
     <select name="travel_purpose">
-      <option value="humanitarian">Purpose: Humanitarian</option>
+      <option value="purpose_type">Purpose Type Of Visa</option>
 <option value="">Select Visa Type</option>
 <option value="humanitarian">Humanitarian Visa</option>
 <option value="tourist">Tourist Visa</option>
@@ -754,9 +754,6 @@
     </select>
 
     <h4>Write be clear about Security risks from prior role</h4>
-    <textarea name="situation" rows="4" placeholder="Describe Your Situation"></textarea>
-  <label>Upload Threat letter</label>
-
 <label for="situation" class="upload-btn"> Select Describe Your Situation</label>
     <textarea name="situation" rows="4" placeholder="Describe Your Situation"></textarea>
 	  
