--- a/form/form.html
+++ b/form/form.html
@@ -731,7 +731,7 @@
     <input type="text" name="distination_city" class="input-control" placeholder="Enter Distination City" required>
 	  
     <label for="total_family_member">Total Family Member *</label>
-    <input type="number" name="total_family_member" placeholder="Total Family Member">
+    <input type="number" name="total_family_member" class="input-control" placeholder="Total Family Member" required>
 	  
 <label for="total son">Sons *</label>
  <input type="number" name="total son" placeholder="Sons">  
