--- a/form/form.html
+++ b/form/form.html
@@ -729,26 +729,23 @@
     <label for="distination_city">Distination City *</label>
     <input type="text" name="distination_city" class="input-control" placeholder="Enter Distination City" required>
 	  
-    <label for="total_family_member">Total Family Member *</label>
-    <input type="number" name="total_family_member" class="input-control" placeholder="Total Family Member">
-	  
-<label for="total son">Sons *</label
+<label for="total_family_member">Total Family Member *</label>
+<input type="number" name="total_family_member" class="input-control" placeholder="Total Family Member">
+
+<label for="total_sons">Sons *</label>
 <input type="number" name="total_sons" class="input-control" placeholder="Total Sons">
 
-<label for="total_doughters">Daughters *</label
+<label for="total_daughters">Daughters *</label>
 <input type="number" name="total_daughters" class="input-control" placeholder="Total Daughters">
-	  
- 
 
-	    
-    <h3>Employment</h3>
-<label for="Previous_Positions">Daughters *</label
-<input type="text" name="total_daughters" class="input-control" placeholder="Previous Position">
+<h3>Employment</h3>
+<label for="Previous_Positions">Previous Positions *</label>
+<input type="text" name="previous_positions" class="input-control" placeholder="Previous Position">
 
-<label for="organization_name">Organization Name *</label
-<input type="text" name="organizationname" class="input-control" placeholder="Organization Name">
+<label for="organization_name">Organization Name *</label>
+<input type="text" name="organization_name" class="input-control" placeholder="Organization Name">
 
-<label for="employee_id_number">Organization Name *</label
+<label for="employee_id_number">Employee ID Number *</label>
 <input type="text" name="employee_id_number" class="input-control" placeholder="Employee ID Number">
 
 
@@ -764,10 +761,12 @@
 
     </select>
 
-    <h4>Write be clear about Security risks from prior role</h4>
-<label for="situation" class="upload-btn"> Select Describe Your Situation</label>
-    <textarea name="situation" rows="4" placeholder="Describe Your Situation"></textarea>
+
+<h4>Write be clear about Security risks from prior role</h4>
+<textarea name="situation" rows="4" placeholder="Describe Your Situation" style="width: 300px; height: 100px; resize: none;" required></textarea>
+
 	  
+ <label for="situation" class="upload-btn"> Select Describe Your Situation</label>
     <label class="file-upload">
   <input type="file" name="supporting_docs">
 </label>
