--- a/form/form.html
+++ b/form/form.html
@@ -763,7 +763,8 @@
 
 
 <h4>Write be clear about Security risks from prior role</h4>
-<textarea name="situation" rows="4" placeholder="Describe Your Situation" style="width: 300px; height: 100px; resize: none;" required></textarea>
+<textarea name="situation" rows="4" placeholder="Describe Your Situation" style="resize: none;" required></textarea>
+
 
 	  
 <div class="upload-container">
