--- a/form/form.html
+++ b/form/form.html
@@ -766,12 +766,13 @@
 <textarea name="situation" rows="4" placeholder="Describe Your Situation" style="resize: none;" required></textarea>
 
 
-	  
+<button class="button primary">دکمه اصلی</button>
+
 <div class="upload-container">
-    <label for="situation" class="upload-btn">Upload Passport </label>
-    <label class="file-upload">
-        <input type="file" name="passport" id="passport">
+    <label for="upload_passport" class="upload-btn">آپلود پاسپورت</label>
+    <input type="file" name="passport" id="upload_passport" style="display:none;">
 </div>
+
 	  
     <p><label>Have your Family member in Italy?</label></p>
     <select name="family_in_italy">
