--- a/form/form.html
+++ b/form/form.html
@@ -766,10 +766,9 @@
 <textarea name="situation" rows="4" placeholder="Describe Your Situation" style="resize: none;" required></textarea>
 
 
-<button class="button primary">دکمه اصلی</button>
-
+<button class="button primary">Upload Passport </button>
 <div class="upload-container">
-    <label for="upload_passport" class="upload-btn">آپلود پاسپورت</label>
+    <label for="upload_passport" class="upload-btn">Upload Passport </label>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
 </div>
 
