--- a/form/form.html
+++ b/form/form.html
@@ -766,12 +766,11 @@
 <textarea name="situation" rows="4" placeholder="Describe Your Situation" style="resize: none;" required></textarea>
 
 
-<button class="button primary">Upload Passport </button>
+<button class="button primary" style="float: left;">Upload Passport </button>
 <div class="upload-container">
     <label for="upload_passport" class="upload-btn">Upload Passport </label>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
 </div>
-
 	  
     <p><label>Have your Family member in Italy?</label></p>
     <select name="family_in_italy">
