--- a/form/form.html
+++ b/form/form.html
@@ -765,7 +765,7 @@
 <h4>Write be clear about Security risks from prior role</h4>
 <textarea name="situation" rows="4" placeholder="Describe Your Situation" style="resize: none;" required></textarea>
 
-
+<div>
 <button class="button primary" style="float: left;">Upload Passport </button>
 <div class="upload-container">
     <label for="upload_passport" class="upload-btn">Upload Passport </label>
