--- a/form/form.html
+++ b/form/form.html
@@ -767,12 +767,11 @@
 
 <div>
 <button class="button primary" style="float: left;">Upload Passport </button>
-<div class="upload-container">
     <label for="upload_passport" class="upload-btn">Upload Passport </label>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
 </div>
 	  
-    <p><label>Have your Family member in Italy?</label></p>
+    <label>Have your Family member in Italy?</label>
     <select name="family_in_italy">
       <option value="">Family in Italy?</option>
       <option value="yes">Yes</option>
