--- a/form/form.html
+++ b/form/form.html
@@ -769,13 +769,16 @@
 <button class="button primary" style="float: left;">Upload Passport </button>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
 </div>
-
+	  
+<div>
    <label for="have_you_family_member_in_italy">Have your Family member in Italy *</label>
     <select name="family_in_italy">
       <option value="please select rank">Plase Select Rank</option>	  
       <option value="yes">Yes</option>
       <option value="no">No</option>
     </select>
+	</div>
+
 	  
     <label for="Message">Message *</label>
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
