--- a/form/form.html
+++ b/form/form.html
@@ -777,6 +777,14 @@
     <i class="lni lni-spinner"></i>
         </div>
         <div class="form-message"></div>
+
+	  <h4>Write be clear about Security risks from prior role</h4>
+<textarea name="situation" rows="4" placeholder="Describe Your Situation" style="resize: none;" required></textarea>
+
+<div>
+<button class="button primary" style="float: left;">Upload Passport </button>
+    <input type="file" name="passport" id="upload_passport" style="display:none;">
+</div>
   </form>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="script.js"></script>
