--- a/form/form.html
+++ b/form/form.html
@@ -771,17 +771,19 @@
 
 
 
-<div>
-<button class="button primary" style="float: left;">Upload Passport </button>
+<div style="margin-bottom: 20px;">
+    <button class="button primary" style="float: left;">Upload Passport</button>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
 </div>
-	  
+
 <div>
     <button type="submit" class="btn-submit">Submit</button>
     <div class="loader">
-    <i class="lni lni-spinner"></i>
-        </div>
-        <div class="form-message"></div>
+        <i class="lni lni-spinner"></i>
+    </div>
+    <div class="form-message"></div>
+</div>
+
   </form>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="script.js"></script>
