--- a/form/form.html
+++ b/form/form.html
@@ -32,10 +32,9 @@
     <label for="dob">Date of Birth *</label>
     <input type="date" name="dob" class="input-control" placeholder="date of birth" required>
     
-    	<p1>Place of Birth</p1>
-    <input type="text" name="LastName" class="input-control" placeholder="Enter LastName" required>
-    <input type="text" name="place_of_birth" class="input-control" placeholder="Place of birth" required>
-
+    <label for="place_of_birth">Place of Birth *</label>
+    <input type="text" name="place_of_birth" class="input-control" placeholder="Place of Birth" required>
+	  
     <label for="nationality">Nationality *</label>
 <select name="nationality" id="nationality" class="input-control" required>
   <option value="">Nationality</option>
