--- a/form/form.html
+++ b/form/form.html
@@ -770,19 +770,17 @@
 
 
 
-<div>
+<div style="margin-bottom: 20px; display: block;">
     <button class="button primary" style="float: left;">Upload Passport</button>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
 </div>
 
-<div style="margin-top: 20px;">
+<div style="display: block;">
     <button type="submit" class="btn-submit">Submit</button>
     <div class="loader">
         <i class="lni lni-spinner"></i>
     </div>
     <div class="form-message"></div>
-</div>
-
 </div>
 
   </form>
