--- a/form/form.html
+++ b/form/form.html
@@ -769,7 +769,7 @@
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
 
 
-
+<div>
 <div style="margin-bottom: 20px; display: block;">
     <button class="button primary" style="float: left;">Upload Passport</button>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
