--- a/form/form.html
+++ b/form/form.html
@@ -768,20 +768,13 @@
     <label for="Message">Message *</label>
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
 
-
-<div>
-<div style="margin-bottom: 20px; display: block;">
-    <button class="button primary" style="float: left;">Upload Passport</button>
+<header>
+    <button class="button primary">Upload Passport</button>
     <input type="file" name="passport" id="upload_passport" style="display:none;">
-</div>
-
-<div style="display: block;">
     <button type="submit" class="btn-submit">Submit</button>
-    <div class="loader">
-        <i class="lni lni-spinner"></i>
-    </div>
-    <div class="form-message"></div>
-</div>
+</header>
+
+
 
   </form>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
