--- a/form/form.html
+++ b/form/form.html
@@ -768,11 +768,14 @@
     <label for="Message">Message *</label>
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
 
-<header>
-    <button class="button primary">Upload Passport</button>
-    <input type="file" name="passport" id="upload_passport" style="display:none;">
-    <button type="submit" class="btn-submit">Submit</button>
-</header>
+<footer>
+    <button>دکمه 1</button>
+    <button>دکمه 2</button>
+    <button>دکمه 3</button>
+    <button>دکمه 4</button>
+    <button>دکمه 5</button>
+    <button>دکمه 6</button>
+</footer>
 
 
 
