--- a/form/form.html
+++ b/form/form.html
@@ -769,12 +769,14 @@
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
 
 <footer>
-    <button>دکمه 1</button>
-    <button>دکمه 2</button>
-    <button>دکمه 3</button>
-    <button>دکمه 4</button>
-    <button>دکمه 5</button>
+    <button class="custom-button">دکمه 1</button>
+    <button class="custom-button">دکمه 2</button>
+    <button class="custom-button">دکمه 3</button>
+    <button class="custom-button">دکمه 4</button>
+    <button class="custom-button">دکمه 5</button>
+    <button class="custom-button">دکمه 6</button>
 </footer>
+
 
 
 
