--- a/form/form.html
+++ b/form/form.html
@@ -768,17 +768,13 @@
     <label for="Message">Message *</label>
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
 
-<footer>
-    <button class="custom-button">دکمه 1</button>
-    <button class="custom-button">دکمه 2</button>
-    <button class="custom-button">دکمه 3</button>
-    <button class="custom-button">دکمه 4</button>
-    <button class="custom-button">دکمه 5</button>
-    <button class="custom-button">دکمه 6</button>
-</footer>
-
-
-
+<div style="display: block;">
+    <button type="submit" class="btn-submit">Submit</button>
+    <div class="loader">
+        <i class="lni lni-spinner"></i>
+    </div>
+    <div class="form-message"></div>
+</div>
 
   </form>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
