--- a/form/form.html
+++ b/form/form.html
@@ -499,7 +499,7 @@
     <input type="text" name="passport_no" class="input-control" placeholder="Enter Passport No" required>
     <label for="date">Date of Issue *</label>
     <input type="date" name="date_of_issue" class="input-control" placeholder="Date of Issue" required>
-    <label for="date">Date of Issue *</label>
+    <label for="date">Date of Expiration *</label>
     <input type="date" name="date_of_expiration" class="input-control" placeholder="Date of Expiration" required>
  <label for="place_of_issue">Place of Issue *</label>
     <select name="Please select">
