--- a/form/form.html
+++ b/form/form.html
@@ -247,7 +247,8 @@
 	<a1>Address</a1>
     <input type="text" name="address" class="input-control" placeholder="Address" required>
 
-<a1>Country_Code</a1>
+<a1>Country Code</a1>
+    <select name="country_code">
     <select name="Please select">
     <option value="">Please select</option>
     <option value="93">Afghanistan (+93)</option>
@@ -497,10 +498,12 @@
     <h3>Passport Information</h3>
     <label for="passport">Passport No *</label>
     <input type="text" name="passport_no" class="input-control" placeholder="Enter Passport No" required>
+	    
     <label for="date">Date of Issue *</label>
     <input type="date" name="date_of_issue" class="input-control" placeholder="Date of Issue" required>
-    <label for="date">Date of Expiration *</label>
-    <input type="date" name="date_of_expiration" class="input-control" placeholder="Date of Expiration" required>
+	    
+    <label for="date">Expiration Date *</label>
+    <input type="date" name="expiration_date" class="input-control" placeholder="Expiration Date" required>
  <label for="place_of_issue">Place of Issue *</label>
     <select name="Please select">
       <option value="">Please select</option>
