--- a/form/form.html
+++ b/form/form.html
@@ -247,8 +247,8 @@
 	<a1>Address</a1>
     <input type="text" name="address" class="input-control" placeholder="Address" required>
 
-<a1>Country Code</a1>
-    <select name="country_code">
+	      <label for="country_code">Country Code *</label>
+<select name="country_code" id="country_code" class="input-control" required>
     <select name="Please select">
     <option value="">Please select</option>
     <option value="93">Afghanistan (+93)</option>
