--- a/form/form.html
+++ b/form/form.html
@@ -247,9 +247,9 @@
 	<a1>Address</a1>
     <input type="text" name="address" class="input-control" placeholder="Address" required>
 
-	      <label for="country_code">Country Code *</label>
+<label for="country_code">Country Code *</label>
 <select name="country_code" id="country_code" class="input-control" required>
-    <select name="Please select">
+  <option value="">Country Code </option>
     <option value="">Please select</option>
     <option value="93">Afghanistan (+93)</option>
     <option value="355">Albania (+355)</option>
