--- a/form/form.html
+++ b/form/form.html
@@ -504,9 +504,10 @@
 	    
     <label for="date">Expiration Date *</label>
     <input type="date" name="expiration_date" class="input-control" placeholder="Expiration Date" required>
+	  
  <label for="place_of_issue">Place of Issue *</label>
-    <select name="Please select">
-      <option value="">Please select</option>
+<select name="place_of_issue" id="place_of_issue" class="input-control" required>
+ <option value="">select place</option>
 <option value="Afghanistan">Afghanistan</option>
 <option value="Albania">Albania</option>
 <option value="Algeria">Algeria</option>
