--- a/form/form.html
+++ b/form/form.html
@@ -502,14 +502,14 @@
     <label for="date">Date of Issue *</label>
     <input type="date" name="date_of_issue" class="input-control" placeholder="Date of Issue" required>
 	    
-    <label for="date">Date of Issue *</label>
-    <input type="date" name="date_of_issue" class="input-control" placeholder="Date of Issue" required>
+    <label for="date">Date of Expiration *</label>
+    <input type="date" name="date_of_expir" class="input-control" placeholder="Date of Issue" required>
 
 
 	
- <label for="place_of_issue">Place of Issue *</label>
-<select name="place_of_issue" id="place_of_issue" class="input-control" required>
- <option value="">Place of Issue</option>
+    <label for="poi">Place of Issue *</label>
+<select name="poi" id="poi" class="input-control" required>
+  <option value="">Nationality</option>
 <option value="Afghanistan">Afghanistan</option>
 <option value="Albania">Albania</option>
 <option value="Algeria">Algeria</option>
