--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-  <link rel="icon" href="form/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="./form/favicon.ico" type="image/x-icon" />
         <meta charset="utf-8">
         <title>VPI Service - Visa & Immigration Website </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
