--- a/testimonial.html
+++ b/testimonial.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
     <head>
+        <link rel="icon" href="./form/favicon.ico" type="image/x-icon" />
         <meta charset="utf-8">
         <title>VPI Service - Visa & Immigration Website Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
