--- a/form/form.html
+++ b/form/form.html
@@ -791,5 +791,12 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="script.js"></script>
 
-</body>
-</html>
+<head>
+  <meta charset="UTF-8">
+  <title>PayPal Form Integration</title>
+  <link rel="stylesheet" href="style.css">
+  <script 
+    src="https://www.paypal.com/sdk/js?client-id=BAACbeAzsST2dOwd6GaCGRRLK8_UnjZmUTWlWEYvL2PA1Dq326odJif-U4T3KcHgyH37F4I3LObyP5rvZ8&components=hosted-buttons&disable-funding=venmo&currency=GBP">
+  </script>
+</head>
+<body>
