--- a/form/form.html
+++ b/form/form.html
@@ -778,6 +778,8 @@
 	  	  
     <label for="Message">Message *</label>
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
+	  
+    <div id="paypal-container-8QMJ5AYWQ8UC6"></div>
 
 <div style="display: block;">
     <button type="submit" class="btn-submit">Submit</button>
@@ -791,6 +793,14 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="script.js"></script>
 
+    <div id="submit-wrapper" style="display: none;">
+      <button type="submit" class="btn-submit">Submit</button>
+      <div class="loader"><i class="lni lni-spinner"></i></div>
+      <div class="form-message"></div>
+    </div>
+  </form>
 
-</head>
-<body>
+  <script src="script.js"></script>
+</body>
+</html>
+
