--- a/form/form.html
+++ b/form/form.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Send Email Using JavaScript</title>
+  <title>Visa Form Submation</title>
 <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
 <link rel="stylesheet" href="style.css">
 </head>
