--- a/form/form.html
+++ b/form/form.html
@@ -783,6 +783,43 @@
   </form>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="script.js"></script>
+	<style> .btcpay-form { display: inline-flex; align-items: center; justify-content: center; } .btcpay-form--inline { flex-direction: row; } .btcpay-form--block { flex-direction: column; } .btcpay-form--inline .submit { margin-left: 15px; } .btcpay-form--block select { margin-bottom: 10px; } .btcpay-form .btcpay-custom-container{ text-align: center; }.btcpay-custom { display: flex; align-items: center; justify-content: center; } .btcpay-form .plus-minus { cursor:pointer; font-size:25px; line-height: 25px; background: #DFE0E1; height: 30px; width: 45px; border:none; border-radius: 60px; margin: auto 5px; display: inline-flex; justify-content: center; } .btcpay-form select { -moz-appearance: none; -webkit-appearance: none; appearance: none; color: currentColor; background: transparent; border:1px solid transparent; display: block; padding: 1px; margin-left: auto; margin-right: auto; font-size: 11px; cursor: pointer; } .btcpay-form select:hover { border-color: #ccc; } .btcpay-form option { color: #000; background: rgba(0,0,0,.1); } .btcpay-input-price { -moz-appearance: textfield; border: none; box-shadow: none; text-align: center; font-size: 25px; margin: auto; border-radius: 5px; line-height: 35px; background: #fff; }.btcpay-input-price::-webkit-outer-spin-button, .btcpay-input-price::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; } </style>
+<form method="POST" action="http://btcpay.local/api/v1/invoices" class="btcpay-form btcpay-form--block">
+  <input type="hidden" name="storeId" value="E3xw9EgLNC5ogEPJgYsfxwCaFjSMSHeXp6YQ5XuqNnag" />
+  <input type="hidden" name="jsonResponse" value="true" />
+  <input type="hidden" name="orderId" value="auto" />
+  <input type="hidden" name="checkoutDesc" value="Invoice" />
+  <input type="hidden" name="browserRedirect" value="https://visaprointernational.github.io/.com/about.html" />
+  <input type="hidden" name="notifyEmail" value="VisaProInternational@tuta.io" />
+  <input type="hidden" name="checkoutQueryString" value="lang=en" />
+  <input type="hidden" name="price" value="10" />
+  <input type="hidden" name="currency" value="USD" />
+  <input type="image" class="submit" name="submit" src="http://btcpay.local/img/paybutton/pay.svg" style="width:209px" alt="Pay with BTCPay Server, a Self-Hosted Bitcoin Payment Processor">
+</form>
+<script>
+    if (!window.btcpay) {
+        var script = document.createElement('script');
+        script.src = "http://btcpay.local/modal/btcpay.js";
+        document.getElementsByTagName('head')[0].append(script);
+    }
+    function handleFormSubmit(event) {
+        event.preventDefault();
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200 && this.responseText) {
+                window.btcpay.appendInvoiceFrame(JSON.parse(this.responseText).invoiceId);
+            }
+        };
+        xhttp.open('POST', event.target.getAttribute('action'), true);
+        xhttp.send(new FormData(event.target));
+    }
+    document.querySelectorAll(".btcpay-form").forEach(function(el) {
+        if (!el.dataset.initialized) {
+            el.addEventListener('submit', handleFormSubmit);
+            el.dataset.initialized = true;
+        }
+    });
+</script>
 </body>
 </html>
 
