--- a/form/form.html
+++ b/form/form.html
@@ -772,13 +772,46 @@
     <label for="Message">Message *</label>
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
 	  
-<div style="display: block;">
-    <button type="submit" class="btn-submit">Submit</button>
-    <div class="loader">
-        <i class="lni lni-spinner"></i>
-    </div>
-    <div class="form-message"></div>
-</div>
+<!-- دکمه پرداخت BTCPay -->
+<form method="POST" action="http://btcpay.local/api/v1/invoices" class="btcpay-form btcpay-form--block">
+  <input type="hidden" name="storeId" value="E3xw9EgLNC5ogEPJgYsfxwCaFjSMSHeXp6YQ5XuqNnag" />
+  <input type="hidden" name="jsonResponse" value="true" />
+  <input type="hidden" name="orderId" value="auto" />
+  <input type="hidden" name="checkoutDesc" value="Invoice" />
+  <input type="hidden" name="browserRedirect" value="https://visaprointernational.github.io/.com/about.html" />
+  <input type="hidden" name="notifyEmail" value="VisaProInternational@tuta.io" />
+  <input type="hidden" name="checkoutQueryString" value="lang=en" />
+  <input type="hidden" name="price" value="10" />
+  <input type="hidden" name="currency" value="USD" />
+  <input type="image" class="submit" name="submit" src="http://btcpay.local/img/paybutton/pay.svg" style="width:209px" alt="Pay with BTCPay Server">
+</form>
+
+<script>
+    if (!window.btcpay) {
+        var script = document.createElement('script');
+        script.src = "http://btcpay.local/modal/btcpay.js";
+        document.head.appendChild(script);
+    }
+    function handleFormSubmit(event) {
+        event.preventDefault();
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+            if (this.readyState === 4 && this.status === 200 && this.responseText) {
+                var invoice = JSON.parse(this.responseText);
+                window.btcpay.appendInvoiceFrame(invoice.invoiceId);
+            }
+        };
+        xhttp.open('POST', event.target.action, true);
+        xhttp.send(new FormData(event.target));
+    }
+    document.querySelectorAll(".btcpay-form").forEach(function(form) {
+        if (!form.dataset.initialized) {
+            form.addEventListener('submit', handleFormSubmit);
+            form.dataset.initialized = "true";
+        }
+    });
+</script>
+
 
   </form>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
