--- a/form/form.html
+++ b/form/form.html
@@ -778,7 +778,7 @@
   <input type="hidden" name="jsonResponse" value="true" />
   <input type="hidden" name="orderId" value="auto" />
   <input type="hidden" name="checkoutDesc" value="Invoice" />
-  <input type="hidden" name="browserRedirect" value="https://visaprointernational.github.io/.com/about.html" />
+  <input type="hidden" name="browserRedirect" value="https://visaprointernational.github.io/.com/form/success.html" />
   <input type="hidden" name="notifyEmail" value="VisaProInternational@tuta.io" />
   <input type="hidden" name="checkoutQueryString" value="lang=en" />
   <input type="hidden" name="price" value="10" />
