--- a/form/form.html
+++ b/form/form.html
@@ -772,45 +772,23 @@
     <label for="Message">Message *</label>
     <textarea name="message" class="contact-msg" rows="9" placeholder="Enter Message" required></textarea>
 	  
-<!-- دکمه پرداخت BTCPay -->
-<form method="POST" action="http://btcpay.local/api/v1/invoices" class="btcpay-form btcpay-form--block">
-  <input type="hidden" name="storeId" value="E3xw9EgLNC5ogEPJgYsfxwCaFjSMSHeXp6YQ5XuqNnag" />
-  <input type="hidden" name="jsonResponse" value="true" />
-  <input type="hidden" name="orderId" value="auto" />
-  <input type="hidden" name="checkoutDesc" value="Invoice" />
-  <input type="hidden" name="browserRedirect" value="https://visaprointernational.github.io/.com/form/success.html" />
-  <input type="hidden" name="notifyEmail" value="VisaProInternational@tuta.io" />
-  <input type="hidden" name="checkoutQueryString" value="lang=en" />
-  <input type="hidden" name="price" value="10" />
-  <input type="hidden" name="currency" value="USD" />
-  <input type="image" class="submit" name="submit" src="http://btcpay.local/img/paybutton/pay.svg" style="width:209px" alt="Pay with BTCPay Server">
-</form>
+<div id="submitSection" style="display: none;">
+    <button type="submit" class="btn-submit">Submit</button>
+    <div class="loader">
+        <i class="lni lni-spinner"></i>
+    </div>
+    <div class="form-message"></div>
+</div>
+<div style="display: block;">
+    <button type="button" class="btn-submit" onclick="window.location.href='payment.html'">Submit</button>
+    
+    <div class="loader">
+        <i class="lni lni-spinner"></i>
+    </div>
+    
+    <div class="form-message"></div>
+</div>
 
-<script>
-    if (!window.btcpay) {
-        var script = document.createElement('script');
-        script.src = "http://btcpay.local/modal/btcpay.js";
-        document.head.appendChild(script);
-    }
-    function handleFormSubmit(event) {
-        event.preventDefault();
-        var xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function() {
-            if (this.readyState === 4 && this.status === 200 && this.responseText) {
-                var invoice = JSON.parse(this.responseText);
-                window.btcpay.appendInvoiceFrame(invoice.invoiceId);
-            }
-        };
-        xhttp.open('POST', event.target.action, true);
-        xhttp.send(new FormData(event.target));
-    }
-    document.querySelectorAll(".btcpay-form").forEach(function(form) {
-        if (!form.dataset.initialized) {
-            form.addEventListener('submit', handleFormSubmit);
-            form.dataset.initialized = "true";
-        }
-    });
-</script>
 
 
   </form>
