--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="assets/form/form.html" class="nav-item nav-link">Home</a>
+                        <a href="assets/form/payment.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <div class="nav-item dropdown">
@@ -129,8 +129,8 @@
                 <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">404 Pages</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
 		<li class="breadcrumb-item">
-		<a href="form/form.html" class="nav-item nav-link">Registration</a>
-                    <li class="breadcrumb-item"><a href="#" class="text-white">Pages</a></li>
+                    <li class="breadcrumb-item"><a href="#" class="text-white">Registration Form</a></li>
+		<li class="breadcrumb-item"><a href="#" class="text-white">Pages</a></li>
 		<a href="form/form.html" class="nav-item nav-link">form</a>
                 </ol>    
             </div>
