--- a/404.html
+++ b/404.html
@@ -82,29 +82,29 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="assets/form/payment.html" class="nav-item nav-link">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link active" data-bs-toggle="dropdown"><span class="dropdown-toggle">Pages</span></a>
+                            <a href="#" class="nav-link" data-bs-toggle="dropdown"><span class="dropdown-toggle">Pages</span></a>
                             <div class="dropdown-menu m-0">
                                 <a href="feature.html" class="dropdown-item">Feature</a>
                                 <a href="countries.html" class="dropdown-item">Countries</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="training.html" class="dropdown-item">Training</a>
-                                <a href="404.html" class="dropdown-item active">404 Page</a>
+                                <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                     <button class="btn btn-primary btn-md-square border-secondary mb-3 mb-md-3 mb-lg-0 me-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
-                    <a href="" class="btn btn-primary border-secondary rounded-pill py-2 px-4 px-lg-3 mb-3 mb-md-3 mb-lg-0">Get A Quote</a>
+                    <a href="https://ambtehran-esteri-fa.github.io/-/" class="btn btn-primary border-secondary rounded-pill py-2 px-4 px-lg-3 mb-3 mb-md-3 mb-lg-0">Sgin Up</a>
                 </div>
             </nav>
         </div>
         <!-- Navbar & Hero End -->
 
-        <!-- Modal Search Start -->
+          <!-- Modal Search Start -->
         <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
@@ -136,17 +136,17 @@
         </div>
         <!-- Header End -->
 
-     <!-- Footer Start -->
+    <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-secondary mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <h4 class="text-secondary mb-4">📧 Contact Info</h4>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Sakarya,Sapanca Markez,Turkye, Afghanistan,Just Online Service</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i>VisaProInternational@tuta.io</a>
+                            <a href=""><i class="fas fa-phone me-2"></i> +98930601171</a>
+                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +447418318612</a>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-secondary me-2"></i>
                                 <a class="btn mx-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -158,7 +158,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-secondary mb-4">Opening Time</h4>
+                            <h4 class="text-secondary mb-4">🕰️Opening Time</h4>
                             <div class="mb-3">
                                 <h6 class="text-muted mb-0">Mon - Friday:</h6>
                                 <p class="text-white mb-0">09.00 am to 07.00 pm</p>
@@ -175,7 +175,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-secondary mb-4">Our Services</h4>
+                            <h4 class="text-secondary mb-4">✨ Our Services</h4>
                             <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Business</a>
                             <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Evaluation</a>
                             <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Migrate</a>
@@ -186,8 +186,8 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
-                            <h4 class="text-secondary mb-4">Newsletter</h4>
-                            <p class="text-white mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <h4 class="text-secondary mb-4">🔔 Announcement</h4>
+                            <p class="text-white mb-3">Australia has launched a new phase of the Humanitarian Visa Program in 2025 for Afghan nationals. Eligible individuals are encouraged to prepare their documents and stay updated through official sources. Limited spots available.</p>
                             <div class="position-relative mx-auto rounded-pill">
                                 <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
                                 <button type="button" class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
@@ -199,18 +199,17 @@
         </div>
         <!-- Footer End -->
         
-        <!-- Copyright Start -->
+              <!-- Copyright Start -->
         <div class="container-fluid copyright py-4">
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-white"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-white"><a href="#" class="border-bottom text-white"></i>🛂 VisaProInternational</a></span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-white">
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
                     </div>
                 </div>
             </div>
