--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <head>
 	    <link rel="icon" href="./form/favicon.ico" type="image/x-icon" />
         <meta charset="utf-8">
-        <title>VPI Service - Visa & Immigration Website Template</title>
+        <title>VPI Service - Visa & Immigration Website </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
