--- a/404.html
+++ b/404.html
@@ -130,25 +130,25 @@
 		<li class="breadcrumb-item">
 
 <li class="breadcrumb-item" style="margin-bottom: 10px;">
-  <a href="form/payment/policies.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
+  <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
     Review Our Forms Policies
   </a>
 </li>
 
 <li class="breadcrumb-item" style="margin-bottom: 10px;">
-  <a href="form/payment/job-offer.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
+  <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
     Job Offer Application Form
   </a>
 </li>
 
 <li class="breadcrumb-item" style="margin-bottom: 10px;">
-  <a href="form/payment/request.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
+  <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
     Application Request Form
   </a>
 </li>
 
 <li class="breadcrumb-item" style="margin-bottom: 10px;">
-  <a href="form/payment/job-offer.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
+  <a href="form/payment/payment.html" style="background-color: #dc3545; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; width: 250px; text-align: center; font-size: 16px;">
     Job Offer Application Form
   </a>
 </li>
